fix(chat): streaming responses (#99)
* chore: improve install instructions

* chore: release size/install optimization

* chore: use debian distros

* fix(install): remove unused var

* fix(chat): allow streaming responses

* feat(chat): major ui improvements

* feat(chat): use llm for tool calling analysis

* chore: code cleanup/merge

* chore: pr cleanup

* chore: remove unused variable

* chore: pr cleanup

* chore: fix build deps

---------

Co-authored-by: Bobby Radford <bobby@rownd.io>

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "requests>=2.25.0",
     "structlog>=25.4.0",
     "asgi-correlation-id>=4.3.4",
-    "atomic-agents>=2.0.1",
+    "atomic-agents==2.1.0",
     "jsonref>=1.1.0",
     "celery>=5.5.3",
 ]
