feat: add directory upload capability to CLI datasets ingest command (#223)
* chore: add local RAG worker support for nx

- Add rag/project.json to enable 'nx start rag' command
- Add start-local.sh convenience script to run both server and RAG worker
- Fixes issue where RAG tasks timeout when running server locally after PR #213

* fix: address code review feedback

- Move trap setup before starting server to ensure cleanup on early exits
- Add proper executor and options wrapper for rag build target
- Include INT and TERM signals in trap for better signal handling

* docs: update README with local RAG worker setup instructions

- Add instructions for running RAG worker alongside server
- Provide both convenience script and manual terminal options
- Clarifies that both components are required for full functionality

* feat: added recursive and directory uploads

* docs: add directory upload examples to README files

- Add comprehensive examples of directory upload to main README
- Add detailed dataset management examples to CLI README
- Include examples of glob patterns and recursive uploads
- Show batch upload display format
- Add RAG query and chat command examples

* fix(cli): retrieval strategy example

Co-authored-by: cubic-dev-ai[bot] <191113872+cubic-dev-ai[bot]@users.noreply.github.com>

* fix(cli): dataset ** file globs

* chore: testing, removing --recursive flags; etc

* chore: add dataset ingestion tests

* fix(cli): dataset test paths

---------

Co-authored-by: Matt Hamann <mhamann@rownd.io>
Co-authored-by: cubic-dev-ai[bot] <191113872+cubic-dev-ai[bot]@users.noreply.github.com>

--- a/rag/project.json
+++ b/rag/project.json
@@ -3,7 +3,6 @@
   "targets": {
     "start": {
       "executor": "nx:run-commands",
-      "continuous": true,
       "options": {
         "cwd": "{workspaceRoot}/rag",
         "command": "uv run python main.py",
@@ -13,7 +12,7 @@
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "cwd": "..",
+        "cwd": "{workspaceRoot}",
         "command": "docker build -t llamafarm-rag -f rag/Dockerfile ."
       }
     },
