--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -15,7 +15,6 @@ permissions:
   contents: write
 
 env:
-  CLI_NAME: llamafarm-cli
   BINARY_NAME: lf
 
 jobs:
@@ -62,7 +61,7 @@ jobs:
           # Set binary name with .exe extension for Windows
           BINARY_NAME="${{ env.BINARY_NAME }}-${{ matrix.goos }}-${{ matrix.goarch }}"
           if [[ "${{ matrix.goos }}" == "windows" ]]; then
-            BINARY_NAME="${BINARY_NAME}-windows-${{ matrix.goarch }}.exe"
+            BINARY_NAME="${BINARY_NAME}.exe"
           fi
 
           # Build the binary
@@ -73,42 +72,99 @@ jobs:
           echo "SHA256: $(cat ${BINARY_NAME}.sha256)"
           echo "binary_name=${BINARY_NAME}" >> $GITHUB_OUTPUT
 
-          # # Create archive
-          # ARCHIVE_NAME="${{ env.CLI_NAME }}-${{ matrix.goos }}-${{ matrix.goarch }}"
-          # mkdir -p dist
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ steps.build.outputs.binary_name }}"
+          path: |
+            cli/${{ steps.build.outputs.binary_name }}
+            cli/${{ steps.build.outputs.binary_name }}.sha256
 
-          # if [[ "${{ matrix.goos }}" == "windows" ]]; then
-          #   zip "dist/${ARCHIVE_NAME}.zip" "${BINARY_NAME}"
-          # else
-          #   tar -czf "dist/${ARCHIVE_NAME}.tar.gz" "${BINARY_NAME}"
-          # fi
+  # For each build, run the release upload as a separate job, pulling the built artifact from the previous job.
+
+  upload-cli-release:
+    name: Upload CLI Release Asset
+    needs: build-cli
+    runs-on: 'ubuntu-latest'
+    strategy:
+      matrix:
+        include:
+          - goos: linux
+            goarch: amd64
+          - goos: linux
+            goarch: arm64
+          - goos: darwin
+            goarch: amd64
+          - goos: darwin
+            goarch: arm64
+          - goos: windows
+            goarch: amd64
+          - goos: windows
+            goarch: arm64
+
+    steps:
+      - name: Get version
+        id: version
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${{ github.event.release.tag_name}}" >> $GITHUB_OUTPUT
+          fi
+      - name: Set binary name
+        id: set-binary-name
+        run: |
+          BINARY_NAME="${{ env.BINARY_NAME }}-${{ matrix.goos }}-${{ matrix.goarch }}"
+          if [[ "${{ matrix.goos }}" == "windows" ]]; then
+            BINARY_NAME="${BINARY_NAME}.exe"
+          fi
+          echo "binary_name=${BINARY_NAME}" >> $GITHUB_OUTPUT
+
+      - name: Download built binary artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ steps.set-binary-name.outputs.binary_name }}"
+          path: cli/
+
+      - name: Sign and Notarize macOS binary
+        if: matrix.goos == 'darwin'
+        run: |
+          curl -sSfL https://get.anchore.io/quill | sudo sh -s -- -b /usr/local/bin
+          QUILL_SIGN_PASSWORD=${{ secrets.APPLE_CERT_PASSWORD }} quill sign-and-notarize cli/${{ steps.set-binary-name.outputs.binary_name }} \
+            --p12 ${{ secrets.APPLE_CERT_DATA }} \
+            --notary-key-id ${{ secrets.APPLE_NOTARY_KEY_ID }} \
+            --notary-key ${{ secrets.APPLE_NOTARY_KEY }} \
+            --notary-issuer ${{ secrets.APPLE_NOTARY_ISSUER }} \
+            --verbose
 
       - name: Upload assets to the Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.version.outputs.version }}
           files: |
-            cli/${{ steps.build.outputs.binary_name }}
-            cli/${{ steps.build.outputs.binary_name }}.sha256
+            cli/${{ steps.set-binary-name.outputs.binary_name }}
+            cli/${{ steps.set-binary-name.outputs.binary_name }}.sha256
           fail_on_unmatched_files: true
           append_body: true
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ steps.build.outputs.binary_name }}"
-          path: cli/${{ steps.build.outputs.binary_name }}
 
   test-cli-install:
     name: Test Installation Script
     needs: build-cli
     runs-on: ${{ matrix.os }}
-    if: github.event_name == 'release'
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
 
     steps:
+      - name: Get version
+        id: version
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${{ github.event.release.tag_name}}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -119,7 +175,7 @@ jobs:
 
           # Test the install script
           chmod +x install.sh
-          VERSION=${{ github.event.release.tag_name }} INSTALL_DIR=$HOME/.local/bin ./install.sh
+          VERSION=${{ steps.version.outputs.version }} INSTALL_DIR=$HOME/.local/bin ./install.sh
 
           # Test the installed binary
           export PATH="$HOME/.local/bin:$PATH"
