feat: add flexible agent handlers for rag support (#233)
* feat: add flexible agent handlers for rag support

* fix(server): add LFAgent class

* fix(server): address test failures

* fix: persist session history to disk

* chore(server): rename agent_handler to prompt_format

* fix(server/api): agent factory create fn call

* chore(server): update seed prompt format

* fix(server); fix tests

---------

Co-authored-by: Bobby Radford <bobby@rownd.io>

--- a/config/templates/default.yaml
+++ b/config/templates/default.yaml
@@ -7,7 +7,7 @@ namespace: default
 # =============================================================================
 runtime:
   provider: ollama
-  model: llama3.1:8b
+  model: gemma3:1b
   temperature: 0.7
   # instructor_mode: json  
   # api_key: optional, not needed for ollama
