Improvements to CLI chat and project history (#267)
* feat: improve server chat history persistence

* feat(cli): render chat history on chat start

* chore(server): revert project seed runtime changes

* fix: address failing tests

* feat(cli): start interactive project chat with lf chat

* fix(cli): address pr feedback

--- a/server/seeds/project_seed/llamafarm.yaml
+++ b/server/seeds/project_seed/llamafarm.yaml
@@ -4,9 +4,9 @@ name: project_seed
 namespace: llamafarm
 
 runtime:
-  provider: "ollama"
-  model: "gemma3:1b"
-  base_url: http://localhost:11434/v1
+  provider: ollama
+  model: gemma3:1b
+  prompt_format: unstructured
 
 prompts:
   - role: "system"
@@ -40,3 +40,14 @@ prompts:
       Respond with plain text in natural language. Do NOT wrap your response in JSON or any structured format. Just provide direct, helpful answers in conversational Markdown.
 
       Remember: You're here to make LlamaFarm easier to use. Be friendly, concise, and actionable.
+  - role: "assistant"
+    content: |
+      Welcome to LlamaFarm dev mode! 🦙
+
+      I can help you with:
+      - Getting started: `lf init`, `lf start`
+      - Dataset management: `lf datasets create/upload/process`
+      - RAG queries: `lf rag query`
+      - Configuration: editing `llamafarm.yaml`
+
+      Ask me anything about LlamaFarm, or type `/help` for chat commands!
