fix(cli): improve rag startup orchestration (#275)
* fix(cli): better docker orchestration w/ containers

* fix(cli): docker startup refactor

* chore(cli): remove dead code

* chore(release): set task dependency for winget release

* fix(cli): ensure output messages are flushed properly

--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -153,6 +153,7 @@ jobs:
 
   publish-winget:
     runs-on: windows-latest
+    needs: upload-cli-release
     steps:
       - name: Get version
         id: version
