--- a/designer/package.json
+++ b/designer/package.json
@@ -20,12 +20,13 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.2",
     "@lezer/highlight": "^1.2.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "lucide-react": "^0.539.0",
