fix: RAG worker Ollama connection in Docker environments (#347)
* updated both Docker Compose files to add the missing configurations

* the Ollama embedder uses this URL to connect to Ollama running on the host

--- a/deployment/docker_compose/docker-compose.dev.yml
+++ b/deployment/docker_compose/docker-compose.dev.yml
@@ -63,6 +63,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - LF_DATA_DIR=/var/lib/llamafarm
+      - OLLAMA_HOST=http://host.docker.internal:11434
       - CHROMADB_HOST=chromadb-server
       - CHROMADB_PORT=8000
     volumes:
@@ -70,6 +71,8 @@ services:
       - ../../config:/app/config
       - ../../models:/app/models
       - llamafarm_dev_data:/var/lib/llamafarm
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       server:
         condition: service_healthy
