--- a/designer/package.json
+++ b/designer/package.json
@@ -37,6 +37,7 @@
     "rehype-sanitize": "^6.0.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.3.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -50,12 +51,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^9.1.7",
+    "js-yaml": "^4.1.0",
+    "json-schema-to-typescript": "^15.0.4",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.6",
     "typescript": "^5.2.2",
     "vite": "^6.3.5"
   },
