--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ name: Build and Push Docker Images
 on:
   push:
     branches: [main]
-    tags: ["v*"]
+    tags: ['v*']
   pull_request:
     branches: [main]
 
@@ -31,19 +31,19 @@ jobs:
           - service: designer
             context: ./designer
             dockerfile: ./designer/Dockerfile
-            description: "LlamaFarm Designer - React frontend with nginx"
+            description: 'LlamaFarm Designer - React frontend with nginx'
           - service: server
             context: ./
             dockerfile: ./server/Dockerfile
-            description: "LlamaFarm Server - FastAPI backend"
+            description: 'LlamaFarm Server - FastAPI backend'
           - service: rag
             context: ./
             dockerfile: ./rag/Dockerfile
-            description: "LlamaFarm RAG - Celery worker for RAG processing"
+            description: 'LlamaFarm RAG - Celery worker for RAG processing'
           - service: runtime
             context: ./
             dockerfile: ./runtimes/universal/Dockerfile
-            description: "LlamaFarm Universal Runtime - Universal Runtime for all models"
+            description: 'LlamaFarm Universal Runtime - Universal Runtime for all models'
 
     steps:
       - name: Checkout repository
@@ -134,19 +134,19 @@ jobs:
           - service: designer
             context: ./designer
             dockerfile: ./designer/Dockerfile
-            description: "LlamaFarm Designer - React frontend with nginx"
+            description: 'LlamaFarm Designer - React frontend with nginx'
           - service: server
             context: ./
             dockerfile: ./server/Dockerfile
-            description: "LlamaFarm Server - FastAPI backend"
+            description: 'LlamaFarm Server - FastAPI backend'
           - service: rag
             context: ./
             dockerfile: ./rag/Dockerfile
-            description: "LlamaFarm RAG - Celery worker for RAG processing"
+            description: 'LlamaFarm RAG - Celery worker for RAG processing'
           - service: runtime
             context: ./
             dockerfile: ./runtimes/universal/Dockerfile
-            description: "LlamaFarm Universal Runtime - Universal Runtime for all models"
+            description: 'LlamaFarm Universal Runtime - Universal Runtime for all models'
 
     steps:
       - name: Checkout repository
@@ -355,7 +355,7 @@ jobs:
       - name: Download all image artifacts
         uses: actions/download-artifact@v4
         with:
-          pattern: "*-image"
+          pattern: '*-image'
           path: ${{ runner.temp }}/artifacts
           merge-multiple: true
 
@@ -467,11 +467,11 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.service }}:latest
-          format: "sarif"
-          output: "trivy-results-${{ matrix.service }}.sarif"
+          format: 'sarif'
+          output: 'trivy-results-${{ matrix.service }}.sarif'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         if: github.event_name != 'pull_request'
         with:
-          sarif_file: "trivy-results-${{ matrix.service }}.sarif"
+          sarif_file: 'trivy-results-${{ matrix.service }}.sarif'
