--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -399,6 +399,8 @@ jobs:
       - name: Prepare Docker environment
         run: |
           # Create base data directory for main llamafarm volume
+          # Remove existing directory if present to avoid permission issues
+          rm -rf "$HOME/.llamafarm"
           mkdir -p "$HOME/.llamafarm"
           chmod 777 "$HOME/.llamafarm"
 
