Feat(designer): download models and use disk models (#382)
* feat(api): list and download models

* chore: test fixups

* feat(designer): add models on device section with multi-column layout

* feat(api): support for deleting models

* feat(designer): allow models to be downloaded

* fix(designer): models - add space for scroll, fix config switcher, add empty state to search

* feat(designer): update models to use delete endpoints and add toast

* fix(designer): refresh button loading state, and rename "custom" models

* fix(designer): address comments

* fix(rag): optimize Dockerfile to prevent build timeouts

- Improve Docker layer caching by copying lock files first
- Add UV_HTTP_TIMEOUT=300 for better network resilience
- Add UV_NO_SYNC_IGNORE_FILES=1 to speed up builds
- Reduce redundant sync operations

This fixes the pypika build timeout issue in CI by ensuring
dependency layers are cached unless lock files change.

* fix(designer): comments and build errors + hopefully reduce size of this

* fix(designer): build errors

* fix(rag): include README.md files in Docker build context

The RAG Dockerfile was failing during the uv sync step because both
config and rag packages reference README.md in their pyproject.toml
files, but these files were not being copied into the Docker build
context until after the dependency installation step.

This commit updates the COPY commands to include:
- config/README.md
- rag/README.md

This ensures that the hatchling build backend can validate package
metadata during the uv sync --locked step.

* test(e2e): add config file dump before dataset processing

Added debugging step to print the full contents of llamafarm.yaml
before the dataset processing step to help diagnose why the namespace
field is not being found by the CLI.

* fix(api): prevent deadlock in model download when worker fails

Add timeout and task failure detection to the download_model async queue
consumer to prevent infinite blocking if the download thread fail

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -143,6 +143,15 @@ jobs:
           fi
           echo "✓ All sample files uploaded"
 
+      - name: Debug config before processing
+        run: |
+          echo "=== Contents of /tmp/e2e-test/llamafarm.yaml ==="
+          cat /tmp/e2e-test/llamafarm.yaml
+          echo "=== End of config file ==="
+          echo ""
+          echo "Checking for namespace and name fields:"
+          grep -E "^(namespace|name):" /tmp/e2e-test/llamafarm.yaml || echo "⚠️ namespace or name field not found!"
+
       - name: Process dataset
         working-directory: cli
         env:
