Fix(designer): designer project name validation (#385)
* fix(designer): enforce alphanumeric, underscore, and hyphen only in project names and update sample project titles to use valid naming format

* fix(designer): add error state to edit project field, address comments and build errors

* fix: use typed structs for config serialization in CLI init command

The CLI was using map[string]interface{} to receive config from the server API,
then marshaling it to YAML. This caused Go's yaml.v2 to drop required fields
during serialization, leading to validation errors like 'namespace is required'
and missing fields in prompts, datasets, models, and RAG configuration.

Changes:
- Updated init.go to use config.LlamaFarmConfig instead of map[string]interface{}
- Updated Dataset struct to include data_processing_strategy and database fields
- Updated Model struct to include all schema fields (name, model_api_parameters, etc.)
- Updated RuntimeConfig to include default_model field
- Completely rewrote RAG types to match current Python schema:
  - RAGConfig with databases and data_processing_strategies arrays
  - Database, EmbeddingStrategy, RetrievalStrategy structs
  - DataProcessingStrategy, Parser, Extractor structs
- Added MCP configuration types (MCPConfig, MCPServer)
- Added json tags to all structs for proper JSON serialization

Type Generation and Validation:
- Added generate-go-types.sh to generate reference Go types from schema using go-jsonschema
- Added validate-go-types.sh to verify manual types match schema structure
- Updated generate-types.sh to generate and validate both Python and Go types
- Updated CLI README with workflow for schema updates

The generated reference types help ensure cli/cmd/config/types.go stays in sync
with the schema as it evolves.

Fixes e2e test failures and namespace resolution issues.

* debug: add config dump steps to e2e test

Add diagnostic output after each operation to see config state:
- After init: show first 30 lines + critic

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -359,6 +359,16 @@ jobs:
           path: ${{ runner.temp }}/artifacts
           merge-multiple: true
 
+      - name: Free up disk space before loading images
+        run: |
+          echo "Disk space before cleanup:"
+          df -h
+          echo "Cleaning up Docker to free disk space..."
+          docker system prune -af --volumes || true
+          docker image prune -af || true
+          echo "Disk space after cleanup:"
+          df -h
+
       - name: Load all images from artifacts
         run: |
           echo "Loading all Docker images from artifacts..."
