--- a/.gitignore
+++ b/.gitignore
@@ -759,6 +759,6 @@ llamafarm.yaml
 llamafarm.yaml.backup*
 
 lf
-thoughts/
-llamafarm-for-mutli-runtimes.yaml
-batch_results_20251008_111552/full_report.csv
+thoughts
+
+
