fix: use typed structs for config serialization in CLI init command (#384)
* fix: use typed structs for config serialization in CLI init command

The CLI was using map[string]interface{} to receive config from the server API,
then marshaling it to YAML. This caused Go's yaml.v2 to drop required fields
during serialization, leading to validation errors like 'namespace is required'
and missing fields in prompts, datasets, models, and RAG configuration.

Changes:
- Updated init.go to use config.LlamaFarmConfig instead of map[string]interface{}
- Updated Dataset struct to include data_processing_strategy and database fields
- Updated Model struct to include all schema fields (name, model_api_parameters, etc.)
- Updated RuntimeConfig to include default_model field
- Completely rewrote RAG types to match current Python schema:
  - RAGConfig with databases and data_processing_strategies arrays
  - Database, EmbeddingStrategy, RetrievalStrategy structs
  - DataProcessingStrategy, Parser, Extractor structs
- Added MCP configuration types (MCPConfig, MCPServer)
- Added json tags to all structs for proper JSON serialization

Type Generation and Validation:
- Added generate-go-types.sh to generate reference Go types from schema using go-jsonschema
- Added validate-go-types.sh to verify manual types match schema structure
- Updated generate-types.sh to generate and validate both Python and Go types
- Updated CLI README with workflow for schema updates

The generated reference types help ensure cli/cmd/config/types.go stays in sync
with the schema as it evolves.

Fixes e2e test failures and namespace resolution issues.

* debug: add config dump steps to e2e test

Add diagnostic output after each operation to see config state:
- After init: show first 30 lines + critical fields
- After dataset create: show first 40 lines + datasets section
- Before dataset process: show full config + all critical fields

This will help identify if config is corrupted or missing fields
between oper

--- a/.github/workflows/cli-installer.yml
+++ b/.github/workflows/cli-installer.yml
@@ -8,22 +8,22 @@ name: Test CLI Installer
 on:
   pull_request:
     paths:
-      - 'install.sh'
-      - 'cli/**'
-      - 'cli/hack/**'
-      - '.github/workflows/release-cli.yml'
-      - '.github/workflows/cli-installer.yml'
+      - "install.sh"
+      - "cli/**"
+      - "cli/hack/**"
+      - ".github/workflows/release-cli.yml"
+      - ".github/workflows/cli-installer.yml"
   push:
     branches: [main]
     paths:
-      - 'install.sh'
-      - 'cli/**'
-      - 'cli/hack/**'
-      - '.github/workflows/release-cli.yml'
-      - '.github/workflows/test-installer.yml'
+      - "install.sh"
+      - "cli/**"
+      - "cli/hack/**"
+      - ".github/workflows/release-cli.yml"
+      - ".github/workflows/test-installer.yml"
   workflow_dispatch:
 
-# Ensure cli/config directory exists and copy config/schema.yaml before any job
+# Ensure cli/config directory exists and copy config/schema.json before any job
 # This step runs before all jobs using the workflow_call 'pre' trick
 jobs:
   quick-test:
@@ -38,13 +38,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Copy config/schema.yaml to cli/config/schema.yaml
-        run: cp config/schema.yaml cli/cmd/config/schema.yaml
+      - name: Install uv (for schema compilation)
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
+          python-version: "3.12"
+
+      - name: Compile schema (dereference $refs)
+        working-directory: config
+        run: |
+          uv run python compile_schema.py
+          # Verify the dereferenced schema was copied to cli/cmd/config
+          if [ ! -f "../cli/cmd/config/schema.json" ]; then
+            echo "❌ Error: schema.json not copied to cli/cmd/config by compile_schema.py"
+            exit 1
+          fi
+          echo "✓ Dereferenced schema available at cli/cmd/config/schema.json"
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24'
+          go-version: "1.24"
           cache-dependency-path: cli/go.sum
 
       - name: Install dependencies
@@ -67,13 +82,27 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Copy config/schema.yaml to cli/cmd/config/schema.yaml
-        run: cp config/schema.yaml cli/cmd/config/schema.yaml
+      - name: Install uv (for schema compilation)
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
+
+      - name: Compile schema (dereference $refs)
+        working-directory: config
+        run: |
+          uv run python compile_schema.py
+          # Verify the dereferenced schema was copied to cli/cmd/config
+          if [ ! -f "../cli/cmd/config/schema.json" ]; then
+            echo "❌ Error: schema.json not copied to cli/cmd/config by compile_schema.py"
+            exit 1
+          fi
+          echo "✓ Dereferenced schema available at cli/cmd/config/schema.json"
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24'
+          go-version: "1.24"
           cache-dependency-path: cli/go.sum
 
       - name: Run Docker environment tests
@@ -88,13 +117,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Copy config/schema.yaml to cli/cmd/config/schema.yaml
-        run: cp config/schema.yaml cli/cmd/config/schema.yaml
+      - name: Install uv (for schema compilation)
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
+
+      - name: Compile schema (dereference $refs)
+        working-directory: config
+        run: |
+          uv run python compile_schema.py
+          # Verify the dereferenced schema was copied to cli/cmd/config
+          if [ ! -f "../cli/cmd/config/schema.json" ]; then
+            echo "❌ Error: schema.json not copied to cli/cmd/config by compile_schema.py"
+            exit 1
+          fi
+          echo "✓ Dereferenced schema available at cli/cmd/config/schema.json"
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24'
+          go-version: "1.24"
           cache-dependency-path: cli/go.sum
 
       - name: Run comprehensive installer tests
@@ -109,13 +152,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Copy config/schema.yaml to cli/cmd/config/schema.yaml
-        run: cp config/schema.yaml cli/cmd/config/schema.yaml
+      - name: Install uv (for schema compilation)
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
+
+      - name: Compile schema (dereference $refs)
+        working-directory: config
+        run: |
+          uv run python compile_schema.py
+          # Verify the dereferenced schema was copied to cli/cmd/config
+          if [ ! -f "../cli/cmd/config/schema.json" ]; then
+            echo "❌ Error: schema.json not copied to cli/cmd/config by compile_schema.py"
+            exit 1
+          fi
+          echo "✓ Dereferenced schema available at cli/cmd/config/schema.json"
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24'
+          go-version: "1.24"
           cache-dependency-path: cli/go.sum
 
       - name: Run local installer simulation
