--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,6 @@ jobs:
         working-directory: cli
         run: go mod download
 
-      - name: Copy schema.yaml to CLI config
-        run: |
-          mkdir -p cli/cmd/config
-          cp config/schema.yaml cli/cmd/config/
-
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
@@ -64,6 +59,22 @@ jobs:
             exit 1
           fi
           echo "✓ Datamodel validation passed"
+          # Verify that compile_schema.py copied the dereferenced schema to cli/cmd/config
+          if [ ! -f "../cli/cmd/config/schema.json" ]; then
+            echo "❌ Error: schema.json not copied to cli/cmd/config by compile_schema.py"
+            exit 1
+          fi
+          echo "✓ Dereferenced schema available at cli/cmd/config/schema.json"
+
+      - name: Install go-jsonschema
+        run: go install github.com/atombender/go-jsonschema@latest
+
+      - name: Generate Go types
+        run: |
+          # Generate Go types from schema
+          cd cli/cmd/config
+          sh generate-types.sh
+          echo "✓ Go types generation complete"
 
       - name: Build CLI
         working-directory: cli
