--- a/cli/project.json
+++ b/cli/project.json
@@ -1,54 +1,73 @@
 {
-    "$schema": "https://json.schemastore.org/nx-project",
-    "name": "cli",
-    "projectType": "application",
-    "root": "cli",
-    "targets": {
-        "build": {
-            "executor": "nx:run-commands",
-            "options": {
-                "cwd": "{workspaceRoot}/cli",
-                "command": "go build -o ../dist/lf ."
-            }
-        },
-        "test": {
-            "executor": "nx:run-commands",
-            "options": {
-                "cwd": "{workspaceRoot}/cli",
-                "command": "go test ./..."
-            }
-        },
-        "test-install": {
-            "executor": "nx:run-commands",
-            "options": {
-                "cwd": "{workspaceRoot}",
-                "command": "cli/hack/test-install.sh"
-            }
-        },
-        "coverage": {
-            "executor": "nx:run-commands",
-            "options": {
-                "cwd": "{workspaceRoot}/cli",
-                "command": "go test ./... -coverpkg=./... -covermode=atomic -coverprofile=coverage.out && go build -o ../dist/cover2lcov ./tools/cover2lcov && ./../dist/cover2lcov -in coverage.out -out coverage.lcov && go build -o ../dist/coverreport ./tools/coverreport && ./../dist/coverreport -in coverage.out -format=markdown > coverage.md"
-            },
-            "outputs": [
-                "{projectRoot}/coverage.out",
-                "{projectRoot}/coverage.lcov",
-                "{projectRoot}/coverage.md"
-            ]
-        },
-        "coverage:html": {
-            "executor": "nx:run-commands",
-            "options": {
-                "cwd": "{workspaceRoot}/cli",
-                "command": "genhtml coverage.lcov -o coverage-html"
-            },
-            "outputs": [
-                "{projectRoot}/coverage-html"
-            ],
-            "dependsOn": [
-                "coverage"
-            ]
-        }
+  "$schema": "https://json.schemastore.org/nx-project",
+  "name": "cli",
+  "projectType": "application",
+  "root": "cli",
+  "targets": {
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}",
+        "commands": [
+          "cd cli && go generate ./cmd/config",
+          "cd cli && go build -o ../dist/lf ."
+        ],
+        "parallel": false,
+        "dependsOn": [
+          "generate-types"
+        ]
+      }
+    },
+    "generate-types": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}",
+        "commands": [
+          "cd config && uv run python compile_schema.py",
+          "which go-jsonschema >/dev/null 2>&1 || go install github.com/atombender/go-jsonschema@latest",
+          "cd cli/cmd/config && sh generate-types.sh"
+        ],
+        "parallel": false
+      }
+    },
+    "test": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}/cli",
+        "command": "go test ./..."
+      }
+    },
+    "test-install": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}",
+        "command": "cli/hack/test-install.sh"
+      }
+    },
+    "coverage": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}/cli",
+        "command": "go test ./... -coverpkg=./... -covermode=atomic -coverprofile=coverage.out && go build -o ../dist/cover2lcov ./tools/cover2lcov && ./../dist/cover2lcov -in coverage.out -out coverage.lcov && go build -o ../dist/coverreport ./tools/coverreport && ./../dist/coverreport -in coverage.out -format=markdown > coverage.md"
+      },
+      "outputs": [
+        "{projectRoot}/coverage.out",
+        "{projectRoot}/coverage.lcov",
+        "{projectRoot}/coverage.md"
+      ]
+    },
+    "coverage:html": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}/cli",
+        "command": "genhtml coverage.lcov -o coverage-html"
+      },
+      "outputs": [
+        "{projectRoot}/coverage-html"
+      ],
+      "dependsOn": [
+        "coverage"
+      ]
     }
+  }
 }
